apps/traefik/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik.local`)"
      kind: Rule
      services:
        - name: traefik
          port: 8080
  tls:
    certResolver: letsencrypt
